# laptop-guardian

./: .gitignore  LICENSE  LaptopGuardian-windows-installer.bat  README.md  demo.tape  install.bat  install.sh  pyproject.toml  uninstall.bat  uninstall.sh
.github/workflows/: build.yml
docs/: index.html
laptop_guardian/: actions.py  app.py  bluetooth_monitor.py  config.py  motion_monitor.py  usb_monitor.py
