[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laptop-guardian"
version = "1.0.0"
description = "Lock your laptop when Bluetooth is lost, USB is unplugged, or it's moved violently"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Zacharie"}]
keywords = ["security", "anti-theft", "laptop", "lock", "bluetooth", "usb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "pystray>=0.19",
    "Pillow>=9.0",
    "psutil>=5.9",
]

[project.scripts]
laptop-guardian = "laptop_guardian.app:main"

[project.gui-scripts]
laptop-guardian-gui = "laptop_guardian.app:main"
